use effect to prevent autoscroll on mobile screen

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -103,7 +103,7 @@
   }
 
   .surge-radial-gradient{
-    @apply w-screen h-[200vh] bg-[radial-gradient(circle,_rgba(54,79,184,0.3)_0%,_rgba(24,35,82,0)_50%)] fixed top-[-100%] left-0 z-[-100] pointer-events-none 
+    @apply w-screen h-[200vh] bg-[radial-gradient(circle,_rgba(54,79,184,0.2)_0%,_rgba(24,35,82,0)_50%)] fixed top-[-100%] left-0 z-[-100] pointer-events-none 
   }
 
   .content-wrapper{
